--- a/packages/settings/src/index.css
+++ b/packages/settings/src/index.css
@@ -1,6 +1,14 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss" prefix(wcpos);
+@config "../tailwind.config.js";
+
+@theme {
+	/* Custom colors for WordPress admin theme */
+	--color-wp-admin-theme-color: var(--wp-admin-theme-color, #007cba);
+	--color-wp-admin-theme-color-darker-10: var(--wp-admin-theme-color-darker-10, #006ba1);
+	--color-wp-admin-theme-color-darker-20: var(--wp-admin-theme-color-darker-20, #005a87);
+	--color-wp-admin-theme-color-lightest: #e5f1f8;
+	--color-wp-admin-theme-black: #1d2327;
+}
 
 /*
 1. Prevent padding and border from affecting element width. (https://github.com/mozdevs/cssremedy/issues/4)
