update packages, fix tailwind

--- a/packages/settings/src/index.css
+++ b/packages/settings/src/index.css
@@ -1,5 +1,5 @@
-@import "tailwindcss" prefix(wcpos);
-@config "../tailwind.config.js";
+@import "tailwindcss" prefix(wcpos) important;
+/* @config "../tailwind.config.js"; */
 
 @theme {
 	/* Custom colors for WordPress admin theme */
