Change plugin name to WCPOS

--- a/.github/hookdoc-tmpl/layout.tmpl
+++ b/.github/hookdoc-tmpl/layout.tmpl
@@ -27,7 +27,7 @@
     <?js= content ?>
 
     <footer>
-		<a href="https://wcpos.com/">WooCommerce POS</a> &bull;
+		<a href="https://wcpos.com/">WCPOS</a> &bull;
 		<a href="https://github.com/wcpos/woocommerce-pos/">GitHub</a> &bull;
 		<a href="https://github.com/wcpos/discord">Discord Chat</a>
 	</footer>
